--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ code/training_data/output
 data/df_train.parquet
 *.DS_Store
 /submission_nature_mi
+/submission2_nature_mi
+/submission_natcomms
 code/stdout
